correcting video header need to correct donation button going behind video middle

--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,20 @@
     max-width: 400px
 }
 
+video#bgvid {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+
+    transition: 1s opacity;
+}
+
 @media (max-width: 992px) {
     #textHeaderLeft {
         margin: 15px auto;
